--- a/remote_auth/IA/index.html
+++ b/remote_auth/IA/index.html
@@ -80,6 +80,9 @@
         });
       });
     });
-  </script>
+    </script>
+    <form action="/logout" method="get">
+      <button type="submit">Logout</button>
+    </form>
 </body>
 </html>
