--- a/remote_auth/IA/index.html
+++ b/remote_auth/IA/index.html
@@ -80,9 +80,11 @@
         });
       });
     });
-    </script>
-    <form action="/logout" method="get">
-      <button type="submit">Logout</button>
-    </form>
+  </script>
+  <form action="/logout" method="post">
+    <button type="submit">Logout</button>
+  </form>
 </body>
 </html>
+
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
